tests/unit/evaluation/minizinc/general/anon_var_flatten.mzn_fd.err
anon_var_flatten.fzn:1:
  type-inst error: set element type is not finite
