tests/unit/evaluation/minizinc/general/anon_var_flatten.exp2
x = array1d(1..2, [{0}, {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}]);
----------
